[package]
name = "aoc"
version = "0.1.0"
authors = ["Michel van der Hulst <michel@voorkanter.com>"]
edition = "2018"

[profile.release]
debug = true

[workspace]

[dependencies]
time = "0.1.40"
day1 = { path = "day1" }
day2 = { path = "day2" }
day3 = { path = "day3" }
day4 = { path = "day4" }
day5 = { path = "day5" }
day6 = { path = "day6" }
day7 = { path = "day7" }
day8 = { path = "day8" }
day9 = { path = "day9" }